# erp

./: .env.prod.example  .gitignore  docker-compose.prod.yml
back/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 05df3bab4b2e_create_document_domain_space_folder_.py  3f7a1c9e2b04_employee_role_position_notnull.py  7dbccc7f2ca5_create_leave_domain_grant_request_.py  d5da444dcd8f_add_employee_hr_fields_employment_type_.py  fa8812f3562b_create_employee_table.py
back/app/: config.py  main.py
back/app/core/: db.py  deps.py  errors.py  security.py
back/app/models/: __init__.py  base.py  document.py  employee.py  enums.py  leave_adjustment.py  leave_allocation.py  leave_grant.py  leave_request.py
back/app/repositories/: document.py  document_storage.py  employee.py  leave_adjustment.py  leave_allocation.py  (+3 more)
back/scripts/: seed_leave_ledger.py
back/tests/: conftest.py  test_auth.py  test_document_access.py  test_document_models.py  test_document_onlyoffice.py  test_document_storage.py  test_document_tree.py  test_employee_admin.py  test_employee_hr_fields.py  test_employee_provisioning.py  test_health.py  test_leave_accrual.py  test_leave_adjustment.py  test_leave_approval.py  test_leave_balance.py  test_leave_bulk_grant.py  test_leave_cancel.py  test_leave_carryover_reset.py  test_leave_change.py  test_leave_employee_detail.py  test_leave_hr_roster.py  test_leave_intake.py  test_leave_models.py  test_leave_self.py  test_me.py  test_roster.py  test_seed_leave_ledger.py
(+72 files in other folders)
