[project]
name = "erp-back"
version = "0.1.0"
description = "ERP back — 사내 HR/재무 (FastAPI + PostgreSQL). v1: 연차관리."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",  # JWT
    "passlib[bcrypt]>=1.7",            # 비밀번호 해시
    "bcrypt==4.0.1",                   # passlib 호환 버전 고정
    "python-multipart>=0.0.18",        # OAuth2 form-encoded body
    "httpx>=0.27",                     # mediness 인증 프록시 async client (런타임)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
